--- a/index.html
+++ b/index.html
@@ -276,6 +276,31 @@
                 id="projects-container"
                 class="row row-cols-1 row-cols-md-2 g-4"
               >
+                <div class="col project-card" data-category="proprietary">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title">Site InovTelecom</h5>
+                      <p class="card-subtitle mb-2 text-muted">
+                        Desenvolvimento e Manutenção
+                      </p>
+                      <p class="card-text">
+                        Responsável pelo desenvolvimento, manutenção e
+                        otimização do site da InovTelecom, garantindo
+                        performance e experiência do usuário.
+                      </p>
+                      <div class="project-links mt-3">
+                        <a
+                          href="http://www.inovtelecom.net.br/"
+                          target="_blank"
+                          class="btn btn-sm btn-info me-2"
+                          ><i class="fas fa-external-link-alt me-1"></i> Acessar
+                          Site</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="col project-card" data-category="open-source">
                   <div class="card h-100">
                     <div class="card-body">
@@ -308,41 +333,17 @@
                   </div>
                 </div>
 
-                <div class="col project-card" data-category="proprietary">
-                  <div class="card h-100">
-                    <div class="card-body">
-                      <h5 class="card-title">Sistema de Gestão de Rotas BGP</h5>
-                      <p class="card-subtitle mb-2 text-muted">
-                        Online Telecom - Interno
-                      </p>
-                      <p class="card-text">
-                        Sistema interno para gerenciamento e otimização de rotas
-                        BGP e política de tráfego, contribuindo para a
-                        estabilidade e performance da rede.
-                      </p>
-                      <div class="project-links mt-3">
-                        <span class="text-muted"
-                          ><i class="fas fa-lock me-1"></i> Acesso
-                          Restrito</span
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
                 <div class="col project-card" data-category="open-source">
                   <div class="card h-100">
                     <div class="card-body">
                       <h5 class="card-title">
                         Scripts de Automação de Infraestrutura
                       </h5>
-                      <p class="card-subtitle mb-2 text-muted">
-                        Ansible, Python
-                      </p>
+                      <p class="card-subtitle mb-2 text-muted">Python</p>
                       <p class="card-text">
                         Coleção de scripts para automação de tarefas rotineiras
                         de rede, provisionamento de serviços e configuração de
-                        equipamentos, utilizando Ansible e Python.
+                        equipamentos, utilizando o Python.
                       </p>
                       <div class="project-links mt-3">
                         <a
@@ -350,30 +351,6 @@
                           target="_blank"
                           class="btn btn-sm btn-info me-2"
                           ><i class="fab fa-github me-1"></i> Repositório</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col project-card" data-category="proprietary">
-                  <div class="card h-100">
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        Dashboard de Monitoramento de Tráfego
-                      </h5>
-                      <p class="card-subtitle mb-2 text-muted">
-                        Online Telecom - Grafana/Metabase
-                      </p>
-                      <p class="card-text">
-                        Implementação de dashboards personalizados no Grafana e
-                        Metabase para visualização de métricas de rede e
-                        desempenho de serviços críticos.
-                      </p>
-                      <div class="project-links mt-3">
-                        <span class="text-muted"
-                          ><i class="fas fa-lock me-1"></i> Acesso
-                          Restrito</span
                         >
                       </div>
                     </div>
