--- a/index.html
+++ b/index.html
@@ -276,6 +276,30 @@
                 id="projects-container"
                 class="row row-cols-1 row-cols-md-2 g-4"
               >
+                <div class="col project-card" data-category="open-source">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title">RRDReST LibreNMS Docker</h5>
+                      <p class="card-subtitle mb-2 text-muted">
+                        Integração e Monitoramento de Redes
+                      </p>
+                      <p class="card-text">
+                        Integração do RRDReST com LibreNMS utilizando Docker,
+                        facilitando a visualização e análise de dados de
+                        monitoramento de rede através de uma API RESTful.
+                      </p>
+                      <div class="project-links mt-3">
+                        <a
+                          href="https://github.com/santiag0z/rrdrest-librenms-docker"
+                          target="_blank"
+                          class="btn btn-sm btn-info me-2"
+                          ><i class="fab fa-github me-1"></i> Repositório</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="col project-card" data-category="proprietary">
                   <div class="card h-100">
                     <div class="card-body">
@@ -343,7 +367,7 @@
                       <p class="card-text">
                         Coleção de scripts para automação de tarefas rotineiras
                         de rede, provisionamento de serviços e configuração de
-                        equipamentos, utilizando o Python.
+                        equipamentos, utilizando Python.
                       </p>
                       <div class="project-links mt-3">
                         <a
