--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <div class="education-card mb-4 d-flex">
                 <div class="education-img-container me-3">
                   <img
-                    src="https://via.placeholder.com/150/0000FF/808080?text=UNINTER"
+                    src="src/uninter.jpg"
                     alt="UNINTER"
                     class="education-img"
                   />
@@ -129,7 +129,7 @@
               <div class="education-card mb-4 d-flex">
                 <div class="education-img-container me-3">
                   <img
-                    src="https://via.placeholder.com/150/FF0000/FFFFFF?text=UNOPAR"
+                    src="src/unopar.jpeg"
                     alt="UNOPAR"
                     class="education-img"
                   />
@@ -148,7 +148,7 @@
               <div class="education-card mb-4 d-flex">
                 <div class="education-img-container me-3">
                   <img
-                    src="https://via.placeholder.com/150/008000/FFFFFF?text=EEEP"
+                    src="src/eeep.jpg"
                     alt="EEEP Francisca Castro de Mesquita"
                     class="education-img"
                   />
@@ -156,7 +156,7 @@
                 <div class="education-details">
                   <h5 class="education-title">
                     Técnico em Redes de Computadores, Informação e Comunicação
-                    (fevereiro de 2013 - dezembro de 2015)
+                    (2013-2015)
                   </h5>
                   <p class="education-subtitle">
                     Escola Estadual de Educação Profissional Francisca Castro de
@@ -303,7 +303,7 @@
                 <div class="col project-card" data-category="proprietary">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title">Site InovTelecom</h5>
+                      <h5 class="card-title">Site Inov Telecom</h5>
                       <p class="card-subtitle mb-2 text-muted">
                         Desenvolvimento e Manutenção
                       </p>
@@ -328,15 +328,13 @@
                 <div class="col project-card" data-category="open-source">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title">Contribuição ao LibreNMS</h5>
+                      <h5 class="card-title">Contribuição LibreNMS</h5>
                       <p class="card-subtitle mb-2 text-muted">
                         Monitoramento de Redes
                       </p>
                       <p class="card-text">
                         Desenvolvimento e manutenção de funcionalidades para o
-                        sistema de monitoramento de rede LibreNMS. Foco em
-                        integração de novos dispositivos, melhoria de métricas e
-                        otimização de desempenho.
+                        sistema de monitoramento de rede LibreNMS.
                       </p>
                       <div class="project-links mt-3">
                         <a
@@ -365,9 +363,8 @@
                       </h5>
                       <p class="card-subtitle mb-2 text-muted">Python</p>
                       <p class="card-text">
-                        Coleção de scripts para automação de tarefas rotineiras
-                        de rede, provisionamento de serviços e configuração de
-                        equipamentos, utilizando Python.
+                        Script para provisionamento de serviços e configuração
+                        de equipamentos em massa, utilizando Python.
                       </p>
                       <div class="project-links mt-3">
                         <a
