fix: Update GitHub profile link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             ><i class="fab fa-linkedin fa-2x"></i
           ></a>
           <a
-            href="https://github.com/santiagoz"
+            href="https://github.com/santiag0z"
             target="_blank"
             class="social-icon-link"
             aria-label="GitHub profile"
