--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
 
     <footer class="footer mt-auto py-3">
       <div class="container text-center">
-        <span class="text-muted"
-          >&copy; 2025 Santiago Z. Silva. Todos os direitos reservados.</span
+        <span class="footer-text"
+          >&copy; 2025 Santiago.Z. Todos os direitos reservados.</span
         >
       </div>
     </footer>
