Atualiza título de cargo na seção Experiência para 'Network Analyst'.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
           loading="lazy"
         />
         <h1 class="mt-3 profile-name-hero">Santiago.Z</h1>
-        <p class="profile-description-hero">
-          Network Analyst | Contributor LibreNMS
-        </p>
+        <p class="profile-description-hero">Network Analyst</p>
         <p class="hero-about-text mt-4 mx-auto">
           Olá! Sou Santiago Z. Silva, <strong>Analista de Redes</strong> com
           especialização em
