--- a/index.html
+++ b/index.html
@@ -388,44 +388,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        // Project filter logic
-        const projectFilterButtons =
-          document.querySelectorAll("#projects button");
-        const projectCards = document.querySelectorAll(".project-card");
-
-        projectFilterButtons.forEach((button) => {
-          button.addEventListener("click", function () {
-            projectFilterButtons.forEach((btn) => {
-              btn.classList.remove("btn-primary");
-              btn.classList.add("btn-secondary");
-            });
-
-            this.classList.remove("btn-secondary");
-            this.classList.add("btn-primary");
-
-            const filter = this.dataset.filter;
-
-            projectCards.forEach((card) => {
-              if (filter === "all" || card.dataset.category === filter) {
-                card.style.display = "block";
-              } else {
-                card.style.display = "none";
-              }
-            });
-          });
-        });
-
-        // Trigger click on 'Todos' button for projects by default
-        document.querySelector('#projects button[data-filter="all"]').click();
-      });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
         // --- INÍCIO: Lógica para o Efeito de Digitação ---
         const typingTextElement = document.getElementById("typing-text");
         // O texto exato que será digitado
-        const textToType = `Olá! Sou Santiago.Z, Analista de Redes com especialização em Estrutura e Gestão de Redes (UNINTER) e graduação em Análise e Desenvolvimento de Sistemas (UNOPAR). Atuo na Online Telecom gerenciando os ASNs AS-263327 e AS-264221. Sou entusiasta por tecnologia e contribuidor do LibreNMS.`;
+        const textToType = `Olá! Sou Santiago Z. Silva, Analista de Redes com especialização em Estrutura e Gestão de Redes (UNINTER) e graduação em Análise e Desenvolvimento de Sistemas (UNOPAR). Atuo na Online Telecom gerenciando os ASNs AS-263327 e AS-264221. Sou entusiasta por tecnologia e contribuidor do LibreNMS.`;
         let charIndex = 0;
         const typingSpeed = 30; // Velocidade da digitação (ms por caractere)
         const cursor = '<span class="typing-cursor">|</span>'; // Cursor intermitente
@@ -447,7 +413,7 @@
         typeWriter();
         // --- FIM: Lógica para o Efeito de Digitação ---
 
-        // Project filter logic (seu código existente)
+        // Project filter logic
         const projectFilterButtons =
           document.querySelectorAll("#projects button");
         const projectCards = document.querySelectorAll(".project-card");
