--- a/index.html
+++ b/index.html
@@ -5,66 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Santiago.Z</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <div class="container">
-        <a
-          class="navbar-brand"
-          href="#"
-          aria-label="Santiago Z. Silva Home"
-        ></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#education">Formação</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#experience">Experiência</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projetos</a>
-            </li>
-          </ul>
+    <main class="main-content">
+      <div class="profile-card">
+        <div class="profile-pic-main">
+          <img
+            src="https://avatars.githubusercontent.com/u/34222550?v=4"
+            alt="Profile Picture"
+            type="image/png"
+          />
         </div>
-      </div>
-    </nav>
-
-    <div
-      class="profile-hero d-flex align-items-center justify-content-center text-center"
-    >
-      <div>
-        <img
-          src="https://avatars.githubusercontent.com/u/34222550?v=4"
-          class="rounded-circle profile-img-hero"
-          alt="Santiago.Z profile picture"
-          loading="lazy"
-        />
-        <h1 class="mt-3 profile-name-hero">Santiago.Z</h1>
-        <p class="profile-description-hero">Network Analyst</p>
-        <div class="hero-about-text mx-auto">
-          <p id="typing-text"></p>
-        </div>
-        <div class="social-icons-hero mt-4">
+        <h1>Santiago.Z</h1>
+        <p>I am Network Analyst...</p>
+        <div class="social-links">
           <a
             href="https://www.linkedin.com/in/santiago-z/"
             target="_blank"
@@ -79,370 +37,8 @@
             aria-label="GitHub profile"
             ><i class="fab fa-github fa-2x"></i
           ></a>
-          <a
-            href="mailto:santiagoz.silvz@gmail.com"
-            class="social-icon-link"
-            aria-label="Send an email"
-            ><i class="fas fa-envelope fa-2x"></i
-          ></a>
         </div>
       </div>
-    </div>
-
-    <div class="education-full-width-section py-5">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-8">
-            <section id="education">
-              <h2 class="text-center mb-5">
-                <i class="fas fa-graduation-cap me-2"></i>Minha Formação
-              </h2>
-              <div class="education-card mb-4 d-flex">
-                <div class="education-img-container me-3">
-                  <img
-                    src="src/uninter.jpg"
-                    alt="UNINTER logo"
-                    class="education-img"
-                    loading="lazy"
-                  />
-                </div>
-                <div class="education-details">
-                  <h5 class="education-title">
-                    MBE Especialização Lato Sensu em Estrutura e Gestão de Redes
-                    de Computadores, Gestão de Telecomunicações (2021-2022)
-                  </h5>
-                  <p class="education-subtitle">
-                    UNINTER Centro Universitário Internacional
-                  </p>
-                  <p class="education-year">Concluído</p>
-                </div>
-              </div>
-              <div class="education-card mb-4 d-flex">
-                <div class="education-img-container me-3">
-                  <img
-                    src="src/unopar.jpeg"
-                    alt="UNOPAR logo"
-                    class="education-img"
-                    loading="lazy"
-                  />
-                </div>
-                <div class="education-details">
-                  <h5 class="education-title">
-                    Superior de Tecnologia em Análise e Desenvolvimento de
-                    Sistemas, Tecnologia da Informação (2017-2019)
-                  </h5>
-                  <p class="education-subtitle">
-                    UNOPAR - Universidade Norte do Paraná
-                  </p>
-                  <p class="education-year">Concluído</p>
-                </div>
-              </div>
-              <div class="education-card mb-4 d-flex">
-                <div class="education-img-container me-3">
-                  <img
-                    src="src/eeep.jpg"
-                    alt="EEEP Francisca Castro de Mesquita logo"
-                    class="education-img"
-                    loading="lazy"
-                  />
-                </div>
-                <div class="education-details">
-                  <h5 class="education-title">
-                    Técnico em Redes de Computadores, Informação e Comunicação
-                    (2013-2015)
-                  </h5>
-                  <p class="education-subtitle">
-                    Escola Estadual de Educação Profissional Francisca Castro de
-                    Mesquita
-                  </p>
-                  <p class="education-year">Concluído</p>
-                </div>
-              </div>
-            </section>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="experience-full-width-section py-5">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-8">
-            <section id="experience" class="mb-4">
-              <h2 class="text-center mb-5">
-                <i class="fas fa-briefcase me-2"></i>Experiência
-              </h2>
-              <div class="timeline">
-                <div class="timeline-item">
-                  <div class="timeline-dot">
-                    <i class="fas fa-briefcase"></i>
-                  </div>
-                  <div class="timeline-content card">
-                    <div class="card-body">
-                      <h5 class="card-title">Online Telecom</h5>
-                      <p class="card-subtitle mb-2 text-muted">
-                        6 anos 7 meses
-                      </p>
-                      <hr class="timeline-divider" />
-                      <h6 class="mb-0">Analista de Redes Pleno</h6>
-                      <p class="timeline-dates">
-                        janeiro de 2022 - Present (3 anos 6 meses)
-                      </p>
-
-                      <h6 class="mb-0 mt-3">Analista de Redes Júnior</h6>
-                      <p class="timeline-dates">
-                        fevereiro de 2021 - janeiro de 2022 (1 ano)
-                      </p>
-
-                      <h6 class="mb-0 mt-3">Analista de suporte júnior</h6>
-                      <p class="timeline-dates">
-                        dezembro de 2018 - janeiro de 2021 (2 anos 2 meses)
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-dot">
-                    <i class="fas fa-briefcase"></i>
-                  </div>
-                  <div class="timeline-content card">
-                    <div class="card-body">
-                      <h5 class="card-title">Técnico de campo N1</h5>
-                      <h6 class="card-subtitle mb-2 text-muted">
-                        ReriutabaNet Provider
-                      </h6>
-                      <p class="timeline-dates">
-                        dezembro de 2016 - outubro de 2018 (1 ano 11 meses)
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-dot">
-                    <i class="fas fa-briefcase"></i>
-                  </div>
-                  <div class="timeline-content card">
-                    <div class="card-body">
-                      <h5 class="card-title">Técnico de informática</h5>
-                      <h6 class="card-subtitle mb-2 text-muted">
-                        Play House Informática
-                      </h6>
-                      <p class="timeline-dates">
-                        janeiro de 2016 - novembro de 2016 (11 meses)
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="projects-full-width-section py-5">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-8">
-            <section id="projects" class="mb-4">
-              <h2 class="text-center mb-5">
-                <i class="fas fa-project-diagram me-2"></i>Meus Projetos
-              </h2>
-              <div class="d-flex justify-content-center mb-4">
-                <button class="btn btn-primary me-2" data-filter="all">
-                  Todos
-                </button>
-                <button
-                  class="btn btn-secondary me-2"
-                  data-filter="open-source"
-                >
-                  Open Source
-                </button>
-                <button class="btn btn-secondary" data-filter="proprietary">
-                  Proprietário
-                </button>
-              </div>
-
-              <div
-                id="projects-container"
-                class="row row-cols-1 row-cols-md-2 g-4"
-              >
-                <div class="col project-card" data-category="open-source">
-                  <div class="card h-100">
-                    <div class="card-body">
-                      <h5 class="card-title">RRDReST LibreNMS Docker</h5>
-                      <p class="card-subtitle mb-2 text-muted">
-                        Integração e Monitoramento de Redes
-                      </p>
-                      <p class="card-text">
-                        Integração do RRDReST com LibreNMS utilizando Docker,
-                        facilitando a visualização e análise de dados de
-                        monitoramento de rede através de uma API RESTful.
-                      </p>
-                      <div class="project-links mt-3">
-                        <a
-                          href="https://github.com/santiag0z/rrdrest-librenms-docker"
-                          target="_blank"
-                          class="btn btn-sm btn-info me-2"
-                          ><i class="fab fa-github me-1"></i> Repositório</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col project-card" data-category="proprietary">
-                  <div class="card h-100">
-                    <div class="card-body">
-                      <h5 class="card-title">Site Inov Telecom</h5>
-                      <p class="card-subtitle mb-2 text-muted">
-                        Desenvolvimento e Manutenção
-                      </p>
-                      <p class="card-text">
-                        Responsável pelo desenvolvimento, manutenção e
-                        otimização do site da InovTelecom, garantindo
-                        performance e experiência do usuário.
-                      </p>
-                      <div class="project-links mt-3">
-                        <a
-                          href="http://www.inovtelecom.net.br/"
-                          target="_blank"
-                          class="btn btn-sm btn-info me-2"
-                          ><i class="fas fa-external-link-alt me-1"></i> Acessar
-                          Site</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col project-card" data-category="open-source">
-                  <div class="card h-100">
-                    <div class="card-body">
-                      <h5 class="card-title">Contribuição LibreNMS</h5>
-                      <p class="card-subtitle mb-2 text-muted">
-                        Monitoramento de Redes
-                      </p>
-                      <p class="card-text">
-                        Desenvolvimento e manutenção de funcionalidades para o
-                        sistema de monitoramento de rede LibreNMS.
-                      </p>
-                      <div class="project-links mt-3">
-                        <a
-                          href="https://github.com/librenms/librenms"
-                          target="_blank"
-                          class="btn btn-sm btn-info me-2"
-                          ><i class="fab fa-github me-1"></i> Repositório</a
-                        >
-                        <a
-                          href="https://docs.librenms.org/"
-                          target="_blank"
-                          class="btn btn-sm btn-info"
-                          ><i class="fas fa-external-link-alt me-1"></i>
-                          Documentação</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col project-card" data-category="open-source">
-                  <div class="card h-100">
-                    <div class="card-body">
-                      <h5 class="card-title">
-                        Scripts de Automação de Infraestrutura
-                      </h5>
-                      <p class="card-subtitle mb-2 text-muted">Python</p>
-                      <p class="card-text">
-                        Script para provisionamento de serviços e configuração
-                        de equipamentos em massa, utilizando Python.
-                      </p>
-                      <div class="project-links mt-3">
-                        <a
-                          href="https://github.com/santiagoz/network-automation-scripts"
-                          target="_blank"
-                          class="btn btn-sm btn-info me-2"
-                          ><i class="fab fa-github me-1"></i> Repositório</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <footer class="footer mt-auto py-3">
-      <div class="container text-center">
-        <span class="footer-text"
-          >&copy; 2025 Santiago.Z. Todos os direitos reservados.</span
-        >
-      </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        // --- INÍCIO: Lógica para o Efeito de Digitação ---
-        const typingTextElement = document.getElementById("typing-text");
-        // O texto exato que será digitado
-        const textToType = `Olá! Sou Santiago Z. Silva, Analista de Redes com especialização em Estrutura e Gestão de Redes (UNINTER) e graduação em Análise e Desenvolvimento de Sistemas (UNOPAR). Atuo na Online Telecom gerenciando os ASNs AS-263327 e AS-264221. Sou entusiasta por tecnologia e contribuidor do LibreNMS.`;
-        let charIndex = 0;
-        const typingSpeed = 30; // Velocidade da digitação (ms por caractere)
-        const cursor = '<span class="typing-cursor">|</span>'; // Cursor intermitente
-
-        function typeWriter() {
-          if (charIndex < textToType.length) {
-            // Adiciona o caractere atual e o cursor
-            typingTextElement.innerHTML =
-              textToType.substring(0, charIndex + 1) + cursor;
-            charIndex++;
-            setTimeout(typeWriter, typingSpeed);
-          } else {
-            // Remove o cursor após a digitação completa
-            typingTextElement.innerHTML = textToType;
-          }
-        }
-
-        // Inicia o efeito de digitação quando a página carrega
-        typeWriter();
-        // --- FIM: Lógica para o Efeito de Digitação ---
-
-        // Project filter logic
-        const projectFilterButtons =
-          document.querySelectorAll("#projects button");
-        const projectCards = document.querySelectorAll(".project-card");
-
-        projectFilterButtons.forEach((button) => {
-          button.addEventListener("click", function () {
-            projectFilterButtons.forEach((btn) => {
-              btn.classList.remove("btn-primary");
-              btn.classList.add("btn-secondary");
-            });
-
-            this.classList.remove("btn-secondary");
-            this.classList.add("btn-primary");
-
-            const filter = this.dataset.filter;
-
-            projectCards.forEach((card) => {
-              if (filter === "all" || card.dataset.category === filter) {
-                card.style.display = "block";
-              } else {
-                card.style.display = "none";
-              }
-            });
-          });
-        });
-
-        // Trigger click on 'Todos' button for projects by default
-        document.querySelector('#projects button[data-filter="all"]').click();
-      });
-    </script>
+    </main>
   </body>
 </html>
