feat: Implement typing effect on description using JavaScript

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           />
         </div>
         <h1>Santiago.Z</h1>
-        <p>I am Network Analyst...</p>
+        <p>I am <span id="typing-effect"></span></p>
         <div class="social-links">
           <a
             href="https://www.linkedin.com/in/santiago-z/"
@@ -40,5 +40,7 @@
         </div>
       </div>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
